--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,18 @@
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="sign_up"><u>SIGN-UP</u></string>
+    <string name="title_activity_sign_up">Sign-up</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main">PARKTAP</string>
+    <string name="drawer_open">Menu opened</string>
+    <string name="drawer_close">Menu closed</string>
+
+    <string name="nav_drawer_promotions">Promotions</string>
+    <string name="nav_drawer_parking_location">My Parking Location</string>
+    <string name="nav_drawer_inventory">Inventory</string>
+    <string name="nav_drawer_friends">Friends</string>
+    <string name="pref_previously_started">FIRST_TIME_PARKTAP</string>
+    <string name="search">Search</string>
+    <string name="action_restore_app">Restore</string>
 </resources>
